# learn

./: .gitignore  README.md
c/: linked_list.c  pointers.c  robot.c  robot_movement.c  string.c  tree.c
c/bitwise/: example.txt  jaccard.c  number_of_ones.cpp
c/levenshtein/: README.txt  example.txt  example_all.txt  levenshtein.c  levenshtein_load.c  load_file.c  read_file.c  statistic.c
c/levenshtein/example/: example_en_10000.txt  example_en_100000.txt
codeEval/: closest_pair.cpp  closest_pair.txt  closest_pair_brut_force.cpp  compressed_sequence.c  distance.c  distance.cpp  dna.c  dna.cpp  file_size.cpp  following_integer.cpp  helicopter.cpp  helicopter_test.cpp  hidden_digits.c  hidden_digits.txt  kmp.c  longuest_subsequence_string.py2  longuest_subsequence_string.txt  morse.c  morse_alphabet.txt  multiplication_tables.cpp  odd_numbers.cpp  palindrom.cpp  prefixExpression.py  question.c  quicksort.c  reverse_words.cpp  robot.py  spirale.py  stairs.c  stairs.cpp  sum.cpp  uglyNumber.py
coursera/mlclass-ex1/mlclass-ex1/: computeCostMulti.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  ml_login_data.mat  plotData.m
cpp/: .gitignore  functor_with_class.cpp  pointers_references.cpp  virtual_functions.cpp
cpp/closest_pair/: CMakeCache.txt  CMakeLists.txt  closest_tests.cpp  example.txt  point.cpp  point.h  univers.cpp  univers.h
cpp/code_eval/armstrong_number/: CMakeCache.txt  digit.cpp  example.txt  main.cpp  runMain
cpp/code_eval/bricks/: CMakeLists.txt  brick.h  code.cpp  main.cpp  runMain  tests.cpp  wall.cpp  wall.h
cpp/code_eval/digits_sum/: digit.cpp  digit.h  main.cpp  tests.cpp
cpp/code_eval/fill_water/: example.txt  main.cpp  reader.cpp  runMain
cpp/code_eval/fizzbuzz/: CMakeLists.txt  example.txt  main.cpp  reader.h  tests.cpp
cpp/code_eval/number_pairs/: CMakeLists.txt  digit.h  example.txt  main.cpp  tests.cpp
cpp/color_transfer/: CMakeLists.txt  README.md  README.txt  main.cpp  smoothing.cpp  tests.cpp  transfert.cpp  transfert.h  transfert_cv1.cpp
cpp/color_transfer/src/: CMakeLists.txt  README.txt  main.cpp  transfert.cpp
cpp/color_transfer/src/tests/: CMakeLists.txt  tests.cpp
cpp/color_transfer/tests/: CMakeLists.txt  tests.cpp  transfert_tests.cpp
cpp/find_cheese/: CMakeCache.txt  CMakeLists.txt  example.txt  example_no_result.txt  example_piege.txt  grid_array.cpp  grid_array.h  imaze.cpp  main.cpp  main_example.cpp  maze.cpp  maze.h  microsoft_tests.cpp  runExample  runMain
cpp/findcheese/: CMakeLists.txt  maze.cpp
cpp/fstream/: input.cpp
cpp/gtest_tuto/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/hashtables/: hashtables.cpp
cpp/hellogl/: CMakeLists.txt  Info.plist  README.md  hellogl.pro
cpp/hellogl/hellogl.xcodeproj/: project.pbxproj  (+2 more)
cpp/hellogl/src/: CMakeLists.txt  glwidget.cpp  hglwidget.cpp  hglwidget.h  main.cpp  mesh.cpp  mesh.h  meshfactory.cpp  meshfactory.h  myglwidget.cpp  myglwidget.h  qdessingl.cpp  qdessingl.h  vertex.cpp  vertex.h  window.cpp  window.h
cpp/hellogl/src/core/: CMakeLists.txt  bounding_box.h  edge.h  light.h  material.cpp  material.h  mesh.cpp  mesh.h  object3d.cpp  object3d.h  scene.cpp  scene.h  triangle.cpp  triangle.h  vec3d.h
cpp/hellogl/src/utils/: CMakeLists.txt  hgexception.cpp  hgexception.h
cpp/hellogl/src/widgets/: CMakeLists.txt  myglwidget.cpp  myglwidget.h
cpp/hellogl/tests/: CMakeLists.txt  fake_tests.cpp  meshfactory_tests.cpp
cpp/jollyjumper/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  input_jolly_jumpers.txt  jolly_jumper.cpp  jolly_jumper_tests.cpp  main.cpp  runTests
cpp/lessons/: functor_with_struct.cpp
cpp/lessons/constructor/: CMakeLists.txt  brick.h  house.h  main.cpp  rectangle.h  runMain  tests.cpp  wall.cpp  wall.h
cpp/linked_list/: linked_list.cpp
cpp/longuest_line/: CMakeCache.txt  CMakeLists.txt  heap.cpp  heap.h  main.cpp  tests.cpp
cpp/microsoft/: CMakeLists.txt  example.txt  example_1.txt  grid.h  grid_template.cpp  microsoft_tests.cpp  shape.cpp  shape.h
cpp/poo/: private_protected.cpp
cpp/queue/: CMakeLists.txt  my_queue.h  my_queue_tests.cpp
cpp/raymini/: BoundingBox.h  CMakeLists.txt  GLViewer.cpp  GLViewer.h  KDTree.cpp  KDTree.h  Main.cpp  Mesh.cpp  Mesh.h  README.md  Ray.cpp  Ray.h  RayTracer.cpp  Scene.cpp  Triangle.h  Vec3D.h  Vertex.h  Window.cpp  intersection_tests.cpp  kdtree.cpp  kdtree.h  raymini.pro  raymini.pro.user.2.1pre1  raymini.pro.user.2.5pre1
cpp/raymini/.obj/raymini.build/Debug/raymini.build/: Script-A0A52A2ADF7A1E2A99738674.sh  Script-D7BA7D76DAB5DD13389D6332.sh  raymini.dep  raymini.hmap  raymini~.dep
cpp/raymini/.obj/raymini.build/Debug/raymini.build/Objects-normal/i386/: raymini.LinkFileList
cpp/raymini/raymini.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak  rmoutard.mode1v3  rmoutard.pbxuser
cpp/rectangle_overlap/: Point.cpp  main.cpp
cpp/red_black_tree/: main.cpp  rbtree.cpp  rbtree.h  red_black_tree.pro
cpp/stack/: CMakeLists.txt  my_stack.h  my_stack_tests.cpp
cpp/tree/: Tree.cpp  tree.cpp
gtest_tuto/: CMakeLists.txt  runTests  tests.cpp
microsoft/: CMakeLists.txt  README.md  grid.cpp  grid_array.cpp  grid_array.h  grid_template.h  main.cpp  microsoft_tests.cpp  shape.cpp  square.cpp  square.h  template.h
python/bitwise/: binary_to_decimal_tests.py  decimal_to_binary.py
python/class_static_private/: decorator.py  default_values.py  method.py
python/fibonnaci/: fibonnaci.py  fibonnaci_input.txt  fibonnaci_tests.py
python/generator/: generator.py
python/intersection/: intersection.py  intersection_tests.py
python/longuest_subsequence/: longuest_subsequence.py
python/pangrams/: pangrams.py  pangrams_input.txt  pangrams_input.txt~  pangrams_tests.py
python/prefix_expression/: prefix_expression.py  prefix_input.txt
python/queue/: queue.py  queue_test.py
python/tree/: tree.py
simpleViewer/: .qglviewer.xml  CMakeLists.txt  main.cpp  simpleViewer.cpp  simpleViewer.h  simpleViewer.pro
topcoder/champagne/: CMakeLists.txt  champagne.cpp  champagne_tests.cpp
topcoder/teenage_marketing/: marketing.cpp
(+35 files in other folders)
